Tue Jun  1 01:14:31 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* io.c (pipe_open): add RB_GC_GUARD.
	  This caused failure when test/ruby/test_argf.rb is executed with
	  GC.stress = true in mswin32_90

Mon May 31 23:44:22 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: use tclConfig.sh/tkConfig.sh when frameworks
	  are enabled on MacOS X.

	* ext/tk/stubs.c: dirty hack for frameworks and stubs on MacOS X.

	* ext/tk/lib/tk.rb: stop creating a dummy Tcl/Tk interpreter. 
	  And hide a root window before starting eventloop. (for ruby 1.9)

	* ext/tk/tcltklib.c: add codes to support Ruby/Tk-Kit (Rubykit).

Mon May 31 21:49:42 2010  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS::Requester#request): rescue ECONNRESET
	  for Windows.  reported by U.Nakamura.  [ruby-dev:41477]

Mon May 31 19:25:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regparse.c (onig_syntax_warn): do not use external strings as
	  printf format.

Mon May 31 18:22:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-mode-set-encoding): skip shebang line
	  always regardless of ruby.

Mon May 31 15:07:18 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (file_expand_path): Refix r28102: this breaks
	  r28039. test for [ruby-dev:41429] is added. [ruby-core:30516]

Mon May 31 14:47:09 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_inspect): inspect as ASCII when the codepoint
	  of a character in Unicode string is ASCII printable one.

Mon May 31 13:44:40 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_enc_unicode_p): check the encoding is Unicode
	  or not by the name; not function's pointer. [ruby-dev:41479]

Mon May 31 04:03:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): check if expanded dname encoding is
	  compatible with fname, not just copying.  [ruby-core:30516]

	* test/ruby/test_beginendblock.rb (test_endblockwarn): needs
	  encoding comment.
